--- a/static/user.html
+++ b/static/user.html
@@ -5,8 +5,7 @@
 <title>Профиль пользователя</title>
 <style>
 body{font-family:Arial,sans-serif;margin:5px}
-.card{border:1px solid #aaa;padding:5px;margin:5px;display:inline-block;width:180px;text-align:center;background:#f4f4f4;border-radius:5px;vertical-align:top}
-button{cursor:pointer;margin:5px;padding:5px}
+button{margin:5px;padding:5px;font-size:16px;cursor:pointer}
 </style>
 </head>
 <body>
@@ -20,56 +19,62 @@ button{cursor:pointer;margin:5px;padding:5px}
 <button id="mainBtn">В главную</button>
 
 <script>
-let user = null;  // Текущий залогиненный пользователь (с сервера)
-let profileUser = null; // Пользователь, чей профиль открыт
+let loggedUser = null;      // залогиненный
+let profileUser = null;     // чей профиль открыт
 
 function getUserIdFromURL() {
-  let parts = window.location.pathname.split('/');
-  return parseInt(parts[parts.length-1]);
+    let parts = window.location.pathname.split('/');
+    return parseInt(parts[parts.length-1]);
 }
 
 // Загружаем профиль
 async function loadProfile() {
-  let uid = getUserIdFromURL();
-  try {
-    // Получаем все пользователи
-    let res = await fetch('/users');
-    let ulist = await res.json();
-    let loggedRes = await fetch('/profile/' + uid); // профиль открытого пользователя
-    profileUser = await loggedRes.json();
+    let uid = getUserIdFromURL();
+    try {
+        // Все пользователи
+        let res = await fetch('/users');
+        let users = await res.json();
+        profileUser = users.find(u => u.id === uid);
 
-    user = ulist.find(x => x.id === profileUser.id); // текущий пользователь в списке
+        // Залогиненный пользователь
+        // Предположим, хранится в localStorage после логина
+        loggedUser = JSON.parse(localStorage.getItem('loggedUser'));
 
-    // Выводим данные
-    userName.innerText = profileUser.name;
-    userRole.innerText = profileUser.role;
-    userPortfolio.innerText = profileUser.portfolio || "Портфолио отсутствует";
+        // Вывод данных
+        userName.innerText = profileUser.name;
+        userRole.innerText = profileUser.role;
+        userPortfolio.innerText = profileUser.portfolio || "Портфолио отсутствует";
 
-    // Кнопка избранное
-    favBtn.innerText = (profileUser.fav||[]).includes(profileUser.id)?'Удалить из избранного':'В избранное';
-    favBtn.onclick = async () => {
-      await fetch('/fav', {
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body: JSON.stringify({user: user.id, fav: profileUser.id})
-      });
-      alert('Действие выполнено');
+        // Кнопка Избранное
+        favBtn.innerText = (loggedUser.fav||[]).includes(profileUser.id)?'Удалить из избранного':'В избранное';
+        favBtn.onclick = async () => {
+            await fetch('/fav', {
+                method:'POST',
+                headers:{'Content-Type':'application/json'},
+                body: JSON.stringify({user: loggedUser.id, fav: profileUser.id})
+            });
+            // Открыть страницу Избранное после добавления
+            window.location.href = '/#fav';
+        }
+
+        // Кнопка Чат
+        chatBtn.onclick = () => {
+            // Сохраняем ID пользователя для чата и редиректим на главную
+            localStorage.setItem('chatTo', profileUser.id);
+            window.location.href = '/#chat';
+        }
+
+        // Кнопка Главная
+        mainBtn.onclick = () => {
+            window.location.href = '/';
+        }
+
+    } catch(e) {
+        console.error(e);
     }
-
-    // Кнопка чат
-    chatBtn.onclick = () => {
-      window.location.href = '/'; // тут лучше сделать редирект на главный фронт, открыть чат с этим человеком
-      alert('Функция чата открывается на главной странице');
-    }
-
-    // Кнопка главная
-    mainBtn.onclick = () => {
-      window.location.href = '/';
-    }
-
-  } catch(e) { console.error(e); }
 }
 
+// Загрузка профиля при открытии страницы
 loadProfile();
 </script>
 </body>
