Add Telegram support link on main page

--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,15 @@ button{cursor:pointer}
 <button onclick="openChat('GLOBAL')">Глобальный чат</button>
 <button onclick="showFav()">Избранное</button>
 <button onclick="showProf()">Профиль</button>
+    <hr>
+
+<div style="margin-top:15px;font-size:14px;color:#555;text-align:center">
+  Техподдержка телеграм:
+  <a href="https://t.me/aqmolastartsupportbot" target="_blank">
+    @aqmolastartsupportbot
+  </a>
+ </div>
+
 </div>
 
 <div id="fav" class="page">
